reasoning_transformations/CRUXEval/Transformations/logs/sample_183.log
STARTING AT 2024-10-19 22:02:12.559916
[START] processing file: sample_183
*Running tests for: sample_183
 
Result: ['tests_pass']
tests_pass sample_183 /home/yang/Benchmark/dataset/cruxeval/code//sample_183.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_183
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_183", line 13
    nonlocal ln
    ^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'ln' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_183", line 13\n    nonlocal ln\n    ^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'ln\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_183
 
Result: ['tests_pass']
def newFunc_39690(arg0, arg1):
    return arg0 + arg1
Checking transformation create_functions
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_183
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_183
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_183.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_183.py
*Running tests for: sample_183
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_183.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_183',
  'genetic_algorithm': None,
  'original_code': 'def f(text):\n'
                   '    ls = text.split()\n'
                   "    lines = ' '.join(ls[::3]).splitlines()\n"
                   '    res = []\n'
                   '    for i in range(2):\n'
                   '        ln = ls[1::3]\n'
                   '        if 3 * i + 1 < len(ln):\n'
                   "            res.append(' '.join(ln[3 * i:3 * (i + 1)]))\n"
                   '    return lines + res',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_183.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_183.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_183.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.183289,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      "    parse('2024-10-19 22:02:17')\n"
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_39690(arg0, arg1):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    return arg0 + arg1\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(text):\n'
                      '    Fernet.generate_key()\n'
                      '    datetime.datetime.now()\n'
                      "    base64.b64encode(b'73011452508078269270')\n"
                      '    ttest_ind([27, 2, 50], [98, 68, 22])\n'
                      '    time.sleep(0.08)\n'
                      '    shuffle([25, 84, 82])\n'
                      '    try:\n'
                      '        ls = text.split()\n'
                      "        newlines_1 = ' '.join(ls[::3]).splitlines()\n"
                      '        res = [[]][0]\n'
                      '        LoopChecker15 = 111\n'
                      '        LoopChecker25 = 110\n'
                      '        ConditionChecker110 = 301\n'
                      '        ConditionChecker210 = 708\n'
                      '        for LoopIndexOut in range(LoopChecker15 // '
                      'LoopChecker25):\n'
                      '            for i in range(2):\n'
                      '                ln = ls[1::3]\n'
                      '                if ConditionChecker110 & '
                      'ConditionChecker210:\n'
                      '                    if 3 * i + 1 < len(ln):\n'
                      "                        res.append(' '.join(ln[3 * i:3 "
                      '* (i + 1)]))\n'
                      '        else:\n'
                      '            pass\n'
                      '        return newFunc_39690(newlines_1, res)\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_183. Total Time: 6.183289
END AT 2024-10-19 22:02:18.744503
